# stock-management

./: .gitignore  CHANGELOG.md  README.md  README_zh.md  db.py  package-lock.json  package.json  summary.py  vite.config.ts
.github/workflows/: publish.yml
src/: App.css  App.tsx  main.tsx  sidebar.tsx  tabs.css  tabs.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  dashboard.rs  db.rs  lib.rs  loan.rs  main.rs  product.rs  sales.rs  stock.rs  summary.rs
src/components/: Modals.css  SettingsModal.tsx  sidebarButton.tsx
src/components/AddStock/: AddStockPane.css  AddStockPane.tsx  ExpiryDatePicker.tsx
src/components/LineItems/: LineItemsTable.tsx  ProductSelect.css  ProductSelect.tsx  hook.ts
src/components/ProductManagement/: productFormModal.css  productFormModal.tsx  productManagementPane.css  productManagementPane.tsx
src/components/Sidebar/: SidebarList.tsx  sidebar.tsx
src/components/Stock/: AddStockPane.tsx  ProductSelect.tsx  RemoveStockPane.tsx
src/components/Summary/: Chart.tsx  ViewStock.tsx
src/panes/Dashboard/: DashBoard.css  DashboardPane.tsx
src/panes/Loan/: AddLoanPane.tsx  EditLoanModal.tsx  EditLoanPane.tsx  LoanHistoryPane.tsx  LoanSummaryPane.tsx  TransactionDetails.tsx
src/panes/ProductManagement/: pictureHandler.ts  productFormModal.css  productFormModal.tsx  productManagementPane.css  productManagementPane.tsx
src/panes/Sales/: EditSalesPane.tsx  SalesHistoryPane.tsx  (+1 more)
src/types/: Card.ts  Config.ts  SidebarItem.ts  dashboard.ts  loan.ts  product.ts  sale.ts
(+4 files in other folders)
