[package]
name = "USANA库存管理系统"
version = "0.1.3"
description = "An app for managing USANA stock inventory"
authors = ["Dianyi Yang"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stock_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libsql-client = "0.33.4"
tokio = "1.47.1"
anyhow = "1.0.99"
base64 = "0.22.1"
tauri-plugin-fs = "2"
uuid = "1.18.0"
url = "2.5.4"
chrono = "0.4.42"

